sfClaude/force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <label>Event</label>
    <pluralLabel>Events</pluralLabel>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <description>Represents a charity fundraising event. Stores all planning, logistics, and financial information for an individual event including type, dates, venue, status, and donation targets. Central object of the Charity Events Management solution.</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>