sfClaude/force-app/main/default/objects/Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>A rich-text description of the event for use in public-facing listings, attendee communications, and printed materials. Should include event highlights, agenda summary, and fundraising goals.</description>
    <inlineHelpText>Provide a full description of the event. This may be displayed to the public on listings and event pages.</inlineHelpText>
</CustomField>