sfClaude/force-app/main/default/objects/Event__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End Date &amp; Time</label>
    <type>DateTime</type>
    <required>true</required>
    <description>The date and time the event ends. Used alongside Start_DateTime__c by the calendar LWC for event block rendering, and by validation rules to ensure end is after start.</description>
    <inlineHelpText>Enter the date and time the event ends. Must be after the Start Date &amp; Time.</inlineHelpText>
</CustomField>