sfClaude/force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Classifies the format of the charity event. Used to filter event listings, drive reporting segmentation, and tailor communications templates to the event format.</description>
    <inlineHelpText>Select the format that best describes this event. Choose Other if no standard type applies.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gala</fullName>
            </value>
            <value>
                <fullName>Fun Run</fullName>
            </value>
            <value>
                <fullName>Online Webinar</fullName>
            </value>
            <value>
                <fullName>Community Day</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>