sfClaude/force-app/main/default/objects/Event__c/fields/Expected_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendees__c</fullName>
    <label>Expected Attendees</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>The anticipated number of attendees for planning purposes. Used in capacity validation against the linked Venue__c Capacity__c field, and in pre-event logistics reporting.</description>
    <inlineHelpText>Enter the expected number of attendees. This is used for capacity planning and must not exceed the venue capacity.</inlineHelpText>
</CustomField>