sfClaude/force-app/main/default/objects/Event__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <label>Is Public</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the event is visible on public-facing channels such as the website or Experience Cloud portal. Set to true only after the event has been approved and published. Used by the Events Calendar LWC to filter publicly displayable events.</description>
    <inlineHelpText>Tick to make this event visible on public channels. Only published and approved events should be marked as public.</inlineHelpText>
</CustomField>