sfClaude/force-app/main/default/objects/Event__c/fields/Registered_Count__c.field-meta.xml
<CustomField>
    <fullName>Registered_Count__c</fullName>
    <label>Registered Count</label>
    <type>Summary</type>
    <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <summaryFilterItems>
        <field>Event_Registration__c.Registration_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <description>Roll-Up Summary COUNT of all active Event_Registration__c child records where Registration_Status__c is not Cancelled. Includes Registered, Waitlisted, Attended, and No Show. Used for pre-event capacity monitoring against venue capacity and expected attendees.</description>
    <inlineHelpText>The current number of active registrations for this event (excludes cancelled). Used to monitor capacity before the event.</inlineHelpText>
</CustomField>