sfClaude/force-app/main/default/objects/Event__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Indicates the risk classification of the event. Used by the approval process to route high-risk events through a two-level approval chain, and to flag events requiring additional oversight in reports and dashboards.</description>
    <inlineHelpText>Set the risk level for this event. High-risk events require two-level approval before publishing. Consult the Event Risk Assessment guidance if unsure.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>