sfClaude/force-app/main/default/objects/Event__c/fields/Sponsored_By__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_By__c</fullName>
    <label>Sponsored By</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsored Events</relationshipLabel>
    <relationshipName>Sponsored_Events</relationshipName>
    <description>Lookup to the Account record of the primary corporate sponsor for this event. Used in sponsorship reporting and acknowledgement communications.</description>
    <inlineHelpText>Select the corporate sponsor for this event if applicable. Leave blank if the event has no primary sponsor.</inlineHelpText>
</CustomField>