sfClaude/force-app/main/default/objects/Event__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <label>Start Date &amp; Time</label>
    <type>DateTime</type>
    <required>true</required>
    <description>The date and time the event begins. Used by the events calendar LWC, registration open/close automation, reminder flows, and lifecycle management processes.</description>
    <inlineHelpText>Enter the date and time the event starts. This is used to display the event on the calendar and trigger automated reminders.</inlineHelpText>
</CustomField>