sfClaude/force-app/main/default/objects/Event__c/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <label>Target Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>The fundraising target in GBP for this event. Used in dashboard metrics and reports to measure performance against goal. History tracked to monitor target revisions over time.</description>
    <inlineHelpText>Enter the fundraising target for this event in GBP. Leave blank if no specific target has been set.</inlineHelpText>
</CustomField>