sfClaude/force-app/main/default/objects/Event__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>Lookup</type>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <description>Lookup to the Venue__c record where the event will be held. Optional to allow virtual events with no physical venue. Used by validation rules to check that Expected_Attendees__c does not exceed the venue Capacity__c.</description>
    <inlineHelpText>Select the venue for this event. Leave blank for virtual or online-only events.</inlineHelpText>
</CustomField>