sfClaude/force-app/main/default/objects/Event__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <description>Prevents saving an Event where the End Date &amp; Time is not after the Start Date &amp; Time. Ensures event scheduling integrity.</description>
    <errorConditionFormula>End_DateTime__c &lt;= Start_DateTime__c</errorConditionFormula>
    <errorDisplayField>End_DateTime__c</errorDisplayField>
    <errorMessage>End Date &amp; Time must be after Start Date &amp; Time.</errorMessage>
</ValidationRule>