sfClaude/force-app/main/default/objects/Event__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>Venue__c</columns>
    <columns>Registered_Count__c</columns>
    <columns>Total_Donations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Events</label>
    <sharedTo>
        <allUsers>true</allUsers>
    </sharedTo>
</ListView>