sfClaude/force-app/main/default/objects/Event__c/listViews/My_Events.listView-meta.xml
<ListView>
    <fullName>My_Events</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>Venue__c</columns>
    <columns>Registered_Count__c</columns>
    <columns>Total_Donations__c</columns>
    <filters>
        <field>Primary_Organizer__c</field>
        <operation>equals</operation>
        <value>$User.Id</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>My Events</label>
    <sharedTo>
        <allUsers>true</allUsers>
    </sharedTo>
</ListView>