sfClaude/force-app/main/default/objects/Event__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Risk_Level__c</columns>
    <columns>Target_Amount__c</columns>
    <columns>Primary_Organizer__c</columns>
    <columns>Start_DateTime__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Pending Approval</label>
    <sharedTo>
        <allUsers>true</allUsers>
    </sharedTo>
</ListView>