sfClaude/force-app/main/default/objects/Event__c/listViews/Upcoming_Published_Events.listView-meta.xml
<ListView>
    <fullName>Upcoming_Published_Events</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>Venue__c</columns>
    <columns>Registered_Count__c</columns>
    <columns>Total_Donations__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <filters>
        <field>Start_DateTime__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Upcoming Published Events</label>
    <sharedTo>
        <allInternalUsers>true</allInternalUsers>
    </sharedTo>
</ListView>